docs: Update portfolio title and hero heading, and add extensive documentation comments to HTML and CSS files.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Creative Developer</title>
+    <title>Portfolio | MD Shoaib Khan</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,8 @@
 
 <body>
 
-    <!-- Header -->
+    <!-- Header Section -->
+    <!-- Contains the Logo and Navigation Menu -->
     <header class="header">
         <div class="container">
             <a href="#" class="logo">Dev<span>Portfolio</span>.</a>
@@ -39,11 +40,13 @@
     </header>
 
     <!-- Hero Section -->
+    <!-- This section contains the main introduction and call to action -->
     <section id="hero" class="hero">
         <div class="container hero-container">
             <div class="hero-content">
                 <span class="subtitle">Hello, I'm</span>
-                <h1 class="title">Creative <br> <span>Developer</span></h1>
+                <!-- Main Heading with Name -->
+                <h1 class="title">MD Shoaib Khan</h1>
                 <p class="description">
                     I build accessible, pixel-perfect, and performant web experiences.
                     Turning ideas into real-life products is my calling.
@@ -72,6 +75,7 @@
     </section>
 
     <!-- About Section -->
+    <!-- Detailed information about the developer and stats -->
     <section id="about" class="section about">
         <div class="container">
             <div class="section-header">
@@ -110,6 +114,7 @@
     </section>
 
     <!-- Skills Section -->
+    <!-- Grid display of technical skills and tools -->
     <section id="skills" class="section skills">
         <div class="container">
             <div class="section-header">
@@ -152,6 +157,7 @@
     </section>
 
     <!-- Portfolio Section -->
+    <!-- Showcase of featured projects with links to details -->
     <section id="portfolio" class="section portfolio">
         <div class="container">
             <div class="section-header">
@@ -204,6 +210,7 @@
     </section>
 
     <!-- Contact Section -->
+    <!-- Contact form and contact information details -->
     <section id="contact" class="section contact">
         <div class="container">
             <div class="section-header">
