--- a/terms.html
+++ b/terms.html
@@ -74,6 +74,24 @@
                 const logo = document.getElementById('site-logo');
                 logo.innerHTML = `${site.logo.text}<span>${site.logo.span}</span>`;
             });
+
+        // Smart Header logic
+        const header = document.querySelector('.header');
+        let lastScrollY = window.scrollY;
+
+        window.addEventListener('scroll', () => {
+            const currentScroll = window.scrollY;
+            if (header) {
+                if (currentScroll > lastScrollY && currentScroll > 50) {
+                    header.classList.remove('hidden');
+                } else if (currentScroll < lastScrollY && currentScroll > 50) {
+                    header.classList.add('hidden');
+                } else if (currentScroll <= 50) {
+                    header.classList.remove('hidden');
+                }
+            }
+            lastScrollY = currentScroll;
+        });
     </script>
 
     <main class="policy-container reveal active">
