--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                     <span class="section-subtitle" id="skills-subtitle"></span>
                     <h2 class="section-title" id="skills-title"></h2>
                 </div>
-                <div class="skills-grid" id="skills-grid">
-                    <!-- Skills injected here -->
+                <div class="skills-container" id="skills-container">
+                    <!-- Categories injected here -->
                 </div>
             </div>
         </section>
@@ -402,35 +402,72 @@
         }
 
         function populateSkills(skills) {
-            const grid = document.getElementById('skills-grid');
-            skills.forEach((skill, index) => {
-                const card = document.createElement('div');
-                card.className = 'skill-card reveal';
-                card.style.transitionDelay = `${index * 120}ms`; // Increased delay
-                card.innerHTML = `
-                    <i class="${skill.icon}"></i>
-                    <h3>${skill.name}</h3>
-                    <p>${skill.desc}</p>
+            const container = document.getElementById('skills-container');
+            const categories = {
+                programming_languages: "Programming Languages",
+                frontend: "Frontend Development",
+                backend_and_apis: "Backend & APIs",
+                mobile_development: "Mobile Development",
+                ai_machine_learning: "AI & Machine Learning",
+                databases: "Databases",
+                devops_and_tools: "DevOps & Cloud",
+                tools_and_ides: "IDEs & Tools",
+                design_and_media: "Design & Media"
+            };
+
+            Object.keys(skills).forEach((key, index) => {
+                const category = document.createElement('div');
+                category.className = 'skill-category reveal';
+                category.style.transitionDelay = `${index * 100}ms`;
+
+                const title = categories[key] || key.replace(/_/g, ' ');
+                let skillTags = skills[key].map(skill => `<span class="skill-tag">${skill}</span>`).join('');
+
+                category.innerHTML = `
+                    <h3>${title}</h3>
+                    <div class="skill-list">
+                        ${skillTags}
+                    </div>
                 `;
-                grid.appendChild(card);
+                container.appendChild(category);
             });
         }
 
         function populateProjects(projects) {
             const grid = document.getElementById('portfolio-grid');
+            const gradients = [
+                'linear-gradient(45deg, #FF6B6B, #556270)',
+                'linear-gradient(45deg, #4ECDC4, #556270)',
+                'linear-gradient(45deg, #C7F464, #556270)',
+                'linear-gradient(45deg, #64f4b1, #556270)'
+            ];
+
             projects.forEach((project, index) => {
                 const card = document.createElement('div');
                 card.className = 'project-card reveal';
-                card.style.transitionDelay = `${index * 200}ms`; // Increased delay
+                card.style.transitionDelay = `${index * 150}ms`;
+
+                const techTags = project.tech_stack.map(tech => `<span class="tech-tag">${tech}</span>`).join('');
+
                 card.innerHTML = `
                     <div class="project-img">
-                        <div class="img-placeholder" style="background: ${project.imageGradient};"></div>
+                        <div class="img-placeholder" style="background: ${gradients[index % gradients.length]};"></div>
                     </div>
                     <div class="project-content">
-                        <span class="category">${project.category}</span>
-                        <h3>${project.title}</h3>
+                        <h3>${project.name}</h3>
                         <p>${project.description}</p>
-                        <a href="${project.link}" class="read-more">View Details <i class="fa-solid fa-arrow-right"></i></a>
+                        <div class="tech-stack">
+                            ${techTags}
+                        </div>
+                        <div class="project-links">
+                            <a href="${project.repository}" target="_blank" class="project-link">
+                                <i class="fa-brands fa-github"></i> Source
+                            </a>
+                            ${project.live_preview ? `
+                            <a href="${project.live_preview}" target="_blank" class="project-link demo-link">
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i> Live Preview Link
+                            </a>` : ''}
+                        </div>
                     </div>
                 `;
                 grid.appendChild(card);
@@ -459,96 +496,63 @@
             });
         }
 
-        // Advanced "Antigravity" Flow Field System
+        // Advanced Random Particle System
         const canvas = document.getElementById('particle-canvas');
         const ctx = canvas.getContext('2d');
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        }
+        resizeCanvas();
 
         let particles = [];
-        const particleCount = 200; // Reduced for cleaner look
+        const particleCount = 200;
 
-        // Light Theme Palette (Dark Grey/Black)
-        const colors = ['rgba(0, 0, 0, 0.8)', 'rgba(0, 0, 0, 0.5)', 'rgba(32, 33, 36, 0.6)', 'rgba(0, 0, 0, 0.2)'];
-
-        const mouse = {
-            x: null,
-            y: null,
-            radius: 200
-        }
-
-        let time = 0;
-
-        window.addEventListener('mousemove', (event) => {
-            mouse.x = event.x;
-            mouse.y = event.y;
-        });
-
-        window.addEventListener('mouseout', () => {
-            mouse.x = undefined;
-            mouse.y = undefined;
-        });
+        const colors = [
+            'rgba(0, 0, 0, 0.5)',
+            'rgba(0, 0, 0, 0.7)',
+            'rgba(32, 33, 36, 0.7)',
+            'rgba(0, 0, 0, 0.5)'
+        ];
 
         class Particle {
             constructor() {
+                this.init();
+            }
+
+            init() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
-                this.size = Math.random() * 1.5 + 0.1; // Very fine dots, like stars
+
+                this.size = Math.random() * 1.8 + 0.2;
                 this.color = colors[Math.floor(Math.random() * colors.length)];
 
-                this.vx = 0;
-                this.vy = 0;
-                this.maxSpeed = Math.random() * 0.5 + 0.2;
-
-                this.angle = 0;
+                this.vx = (Math.random() - 0.5) * 0.8;
+                this.vy = (Math.random() - 0.5) * 0.8;
+                this.maxSpeed = Math.random() * 0.6 + 0.2;
             }
 
             update() {
-                // Flow Field Logic (Simulated Noise)
-                // Calculate an angle based on position and time
-                const xNoise = this.x * 0.002;
-                const yNoise = this.y * 0.002;
-                const timeNoise = time * 0.0005;
-
-                // Complex wave function to simulate perlin noise flow
-                const angle = (Math.cos(xNoise + timeNoise) + Math.sin(yNoise + timeNoise)) * Math.PI;
-
-                // Acceleration based on flow angle
-                this.vx += Math.cos(angle) * 0.02;
-                this.vy += Math.sin(angle) * 0.02;
-
-                // Mouse Attraction (Antigravity Pull)
-                if (mouse.x != undefined) {
-                    let dx = mouse.x - this.x;
-                    let dy = mouse.y - this.y;
-                    let distance = Math.sqrt(dx * dx + dy * dy);
-
-                    if (distance < mouse.radius * 2) {
-                        let force = (mouse.radius - distance) / mouse.radius;
-                        if (force < 0) force = 0;
-
-                        // Swirl/Orbit effect
-                        // Pull towards
-                        this.vx += (dx / distance) * force * 0.1;
-                        this.vy += (dy / distance) * force * 0.1;
-                    }
-                }
-
-                // Speed Limit
-                const currentSpeed = Math.sqrt(this.vx * this.vx + this.vy * this.vy);
-                if (currentSpeed > this.maxSpeed) {
-                    this.vx = (this.vx / currentSpeed) * this.maxSpeed;
-                    this.vy = (this.vy / currentSpeed) * this.maxSpeed;
-                }
-
                 this.x += this.vx;
                 this.y += this.vy;
 
-                // Wrap around with buffer
-                if (this.x > canvas.width + 5) this.x = -5;
-                else if (this.x < -5) this.x = canvas.width + 5;
-                if (this.y > canvas.height + 5) this.y = -5;
-                else if (this.y < -5) this.y = canvas.height + 5;
+                if (this.x > canvas.width) this.x = 0;
+                else if (this.x < 0) this.x = canvas.width;
+
+                if (this.y > canvas.height) this.y = 0;
+                else if (this.y < 0) this.y = canvas.height;
+
+                if (Math.random() < 0.02) {
+                    this.vx += (Math.random() - 0.5) * 0.1;
+                    this.vy += (Math.random() - 0.5) * 0.1;
+
+                    const speed = Math.sqrt(this.vx * this.vx + this.vy * this.vy);
+                    if (speed > this.maxSpeed) {
+                        this.vx = (this.vx / speed) * this.maxSpeed;
+                        this.vy = (this.vy / speed) * this.maxSpeed;
+                    }
+                }
             }
 
             draw() {
@@ -568,9 +572,6 @@
 
         function animateParticles() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            time++; // Increment time for flow field animation
-
             for (let i = 0; i < particles.length; i++) {
                 particles[i].update();
                 particles[i].draw();
@@ -585,45 +586,34 @@
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
             initParticles();
-            // Upadte height on resize
             if (document.getElementById('scroll-container')) {
                 document.body.style.height = `${document.getElementById('scroll-container').getBoundingClientRect().height}px`;
             }
         });
 
-        // Logic for Smart Sticky Header
         const header = document.querySelector('.header');
         let lastScrollY = window.scrollY;
 
-        // Native Scroll Handler
         window.addEventListener('scroll', () => {
             const currentScroll = window.scrollY;
 
-            // Smart Header Logic
-            // As requested: Scroll Up -> Hide, Scroll Down -> Show
             if (header) {
-                if (currentScroll > lastScrollY && currentScroll > 50) {
-                    // Scrolling Down -> Show Header
-                    header.classList.remove('hidden');
-                } else if (currentScroll < lastScrollY && currentScroll > 50) {
-                    // Scrolling Up -> Hide Header
+                if (currentScroll > lastScrollY && currentScroll > 100) {
                     header.classList.add('hidden');
-                } else if (currentScroll <= 50) {
-                    // At the top -> Always Show
+                } else if (currentScroll < lastScrollY) {
                     header.classList.remove('hidden');
                 }
 
-                // Muted Header Style
                 if (currentScroll > 50) {
                     header.classList.add('scrolled');
                 } else {
                     header.classList.remove('scrolled');
+                    header.classList.remove('hidden');
                 }
             }
 
             lastScrollY = currentScroll;
 
-            // Scroll Spy Logic
             const sections = document.querySelectorAll('section');
             const navLi = document.querySelectorAll('.navbar a');
 
@@ -644,7 +634,6 @@
             });
         });
 
-        // Intersection Observer for Scroll Animations
         function initAnimations() {
             const observerOptions = {
                 threshold: 0.1
