--- a/index.html
+++ b/index.html
@@ -21,41 +21,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
-    <style>
-        /* Loader styles to hide content until loaded */
-        body.loading {
-            overflow: hidden;
-        }
 
-        #loader {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            background: #ffffff;
-            z-index: 9999;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: opacity 0.5s ease;
-        }
-
-        .loader-spinner {
-            width: 50px;
-            height: 50px;
-            border: 3px solid rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
-            border-top-color: var(--primary-color, #7c3aed);
-            animation: spin 1s ease-in-out infinite;
-        }
-
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
 </head>
 
 <body class="loading">
@@ -614,28 +580,47 @@
             }
 
             lastScrollY = currentScroll;
-
-            const sections = document.querySelectorAll('section');
-            const navLi = document.querySelectorAll('.navbar a');
-
-            let currentSection = '';
-            sections.forEach(section => {
-                const sectionTop = section.offsetTop;
-                const sectionHeight = section.clientHeight;
-                if (window.scrollY >= (sectionTop - sectionHeight / 3)) {
-                    currentSection = section.getAttribute('id');
-                }
-            });
-
-            navLi.forEach(a => {
-                a.classList.remove('active');
-                if (a.getAttribute('href').includes(currentSection)) {
-                    a.classList.add('active');
-                }
-            });
         });
 
+        // Modern Scroll Spy using IntersectionObserver
+        function initScrollSpy() {
+            const sections = document.querySelectorAll("section[id]");
+            const navLinks = document.querySelectorAll(".navbar a");
+
+            if (!sections.length || !navLinks.length) return;
+
+            const options = {
+                root: null,
+                rootMargin: '-20% 0px -70% 0px',
+                threshold: 0
+            };
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach((entry) => {
+                    if (entry.isIntersecting) {
+                        const activeId = entry.target.id;
+                        navLinks.forEach((link) => {
+                            link.classList.remove("active");
+                            if (link.getAttribute("href") === `#${activeId}`) {
+                                link.classList.add("active");
+                            }
+                        });
+                    }
+                });
+            }, options);
+
+            sections.forEach((section) => observer.observe(section));
+
+            window.addEventListener('scroll', () => {
+                if (window.scrollY < 100) {
+                    navLinks.forEach(l => l.classList.remove('active'));
+                    if (navLinks[0]) navLinks[0].classList.add('active');
+                }
+            });
+        }
+
         function initAnimations() {
+            initScrollSpy();
             const observerOptions = {
                 threshold: 0.1
             };
@@ -651,10 +636,9 @@
 
             document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
         }
-        // Form Handling with EmailJS
         (function () {
-            // REPLACE 'YOUR_PUBLIC_KEY' with your actual EmailJS public key
-            emailjs.init("YOUR_PUBLIC_KEY");
+
+            emailjs.init("0angy-FFhuMJiDUal");
 
             const contactForm = document.getElementById('contact-form');
             const submitBtn = document.getElementById('submit-btn');
@@ -665,17 +649,14 @@
                 contactForm.addEventListener('submit', function (event) {
                     event.preventDefault();
 
-                    // Security check: Honey-pot
                     if (honeyPot && honeyPot.value !== "") {
                         console.log("Bot detected");
                         return;
                     }
 
-                    // Reset status
                     statusMsg.className = 'contact-status';
                     statusMsg.textContent = '';
 
-                    // Button Loading State
                     const originalBtnContent = submitBtn.innerHTML;
                     submitBtn.disabled = true;
                     submitBtn.innerHTML = '<i class="fa-solid fa-spinner fa-spin"></i><span>Sending...</span>';
@@ -689,9 +670,10 @@
                         message: document.getElementById('contact-message').value
                     };
 
-                    // Send Email using EmailJS
-                    // REPLACE 'YOUR_SERVICE_ID' and 'YOUR_TEMPLATE_ID'
-                    emailjs.send('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', templateParams)
+
+
+                    // Send email Service ID and Template ID
+                    emailjs.send('service_rtmlnoj', 'template_o7kynn5', templateParams)
                         .then(function () {
                             statusMsg.classList.add('success');
                             statusMsg.textContent = 'Message sent successfully! I will get back to you soon.';
