--- a/terms.html
+++ b/terms.html
@@ -11,41 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <style>
-        .policy-container {
-            max-width: 800px;
-            margin: 120px auto 60px;
-            padding: 0 40px;
-        }
 
-        .policy-content h1 {
-            font-family: var(--font-heading);
-            font-size: 3rem;
-            margin-bottom: 2rem;
-            letter-spacing: -1.5px;
-        }
-
-        .policy-content h2 {
-            font-family: var(--font-heading);
-            font-size: 1.5rem;
-            margin: 2rem 0 1rem;
-            color: var(--text-color);
-        }
-
-        .policy-content p {
-            margin-bottom: 1.2rem;
-            color: var(--text-secondary);
-        }
-
-        .back-home {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            margin-bottom: 2rem;
-            font-weight: 500;
-            color: var(--text-color);
-        }
-    </style>
 </head>
 
 <body>
@@ -79,8 +45,8 @@
         const header = document.querySelector('.header');
         let lastScrollY = window.scrollY;
 
-        window.addEventListener('scroll', () => {
-            const currentScroll = window.scrollY;
+        const handleScroll = () => {
+            const currentScroll = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
             if (header) {
                 if (currentScroll > lastScrollY && currentScroll > 100) {
                     // Scrolling Down -> Hide Header
@@ -99,7 +65,9 @@
                 }
             }
             lastScrollY = currentScroll;
-        });
+        };
+
+        window.addEventListener('scroll', handleScroll, true);
     </script>
 
     <main class="policy-container reveal active">
